traduction roles completed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,5 +77,11 @@
     "city": "City",
     "address": "Address",
     "zipcode": "Zip Code"
+  },
+  "roles": {
+    "client": "Client",
+    "operator": "Operator",
+    "admin": "Administrator",
+    "master": "Master"
   }
 }
