--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -83,5 +83,16 @@
     "operator": "Operador",
     "admin": "Administrador",
     "master": "Master"
+  },
+  "BUTTON": {
+    "SAVE": "GUARDAR",
+    "EDIT": "EDITAR",
+    "DELETE": "ELIMINAR",
+    "CLEAR": "LIMPIAR",
+    "PRINT": "IMPRIMIR",
+    "ADD": "REGISTRAR",
+    "FIND": "BUSCAR",
+    "PDF": "PDF",
+    "CANCEL": "CANCELAR"
   }
 }
