--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -34,6 +34,17 @@
       "description": "Este é um exemplo de gráfico de barras que mostra a distribuição de chamados por empresa."
     }
   },
+  "chart": {
+    "callsByMonth": "Chamados por mês",
+    "period": "Período",
+    "monthYear": "Mês/Ano",
+    "callCount": "Qtd de Chamados",
+    "noDataTitle": "Nenhum dado disponível",
+    "noDataSubtitle": "Não há chamados para o período selecionado",
+    "last30Days": "Últimos 30 dias",
+    "last6Months": "Últimos 6 meses",
+    "allAvailableData": "Todos os dados disponíveis"
+  },
   "sideNav": {
     "home": "Início",
     "clients": "Clientes",
