--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -18,7 +18,7 @@
     "title": "Gráficos",
     "closeAll": "Cerrar Todos",
     "pieChart": {
-      "title": "Tickets por Empresa (Circular)",
+      "title": "Tickets por Empresa",
       "description": "Este es un gráfico circular de ejemplo que muestra la distribución de tickets por empresa."
     },
     "lineChart": {
