--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -43,7 +43,8 @@
     "noDataSubtitle": "No hay llamados para el período seleccionado",
     "last30Days": "Últimos 30 días",
     "last6Months": "Últimos 6 meses",
-    "allAvailableData": "Todos los datos disponibles"
+    "allAvailableData": "Todos los datos disponibles",
+    "calls": "Llamadas"
   },
   "sideNav": {
     "home": "Inicio",
