--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -105,7 +105,8 @@
     "ADD": "REGISTRAR",
     "FIND": "BUSCAR",
     "PDF": "PDF",
-    "CANCEL": "CANCELAR"
+    "CANCEL": "CANCELAR",
+    "LOGIN": "ENGAJAR"
   },
   "inputs": {
     "client-modal": {
