create call componente, ajust action button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,7 +106,8 @@
     "FIND": "SEARCH",
     "PDF": "PDF",
     "CANCEL": "CANCEL",
-    "LOGIN": "LOGIN"
+    "LOGIN": "LOGIN",
+    "LOGOUT": "LOGOUT"
   },
   "inputs": {
     "client-modal": {
