--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -107,7 +107,8 @@
     "FIND": "BUSCAR",
     "PDF": "PDF",
     "CANCEL": "CANCELAR",
-    "LOGIN": "ENTRAR"
+    "LOGIN": "ENTRAR",
+    "LOGOUT": "SAIR"
   },
   "inputs": {
     "client-modal": {
